--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 *.unity filter=lfs diff=lfs merge=lfs -text
 *.blender filter=lfs diff=lfs merge=lfs -text
 *.blender1 filter=lfs diff=lfs merge=lfs -text
+*.fbx filter=lfs diff=lfs merge=lfs -text
+*.blend filter=lfs diff=lfs merge=lfs -text
+*.blend1 filter=lfs diff=lfs merge=lfs -text
